# django-rent-predictor

./: README.md  housing_rent_data_300.csv  lr_model.pkl  manage.py  pyproject.toml  scaler.pkl  test_csv.py
predictor/: admin.py  forms.py  ml_model.py  models.py  urls.py  views.py
predictor/migrations/: 0001_initial.py
predictor/templates/predictor/: graph.html  home.html  no_csv.html  upload_csv.html
predictor/templatetags/: form_filters.py
rent_prediction/: asgi.py  settings.py  urls.py  wsgi.py
