[tool.poetry]
name = "rent-prediction"
version = "0.1.0"
description = ""
authors = ["Jaefer-Kemal <jaeferkemal@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
numpy = "^2.1.2"
django = "^5.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
